Fix styling override Use env variable for JSON lookups

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,11 @@
     font-family: sans-serif;
     text-align: center;
 }
-  
+
+#root th, #root td {
+    border: 0;
+}
+
+#root th {
+    text-align: center;
+}
